--- a/questionnaire/build.gradle
+++ b/questionnaire/build.gradle
@@ -17,18 +17,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
-		implementation 'org.springframework.boot:spring-boot-starter-web'
-	
-	//spring boot jpa maven
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// spring boot data jpa
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//mysql
+	// mysql connector
 	implementation 'mysql:mysql-connector-java:8.0.31'
-		implementation 'org.springframework.boot:spring-boot-starter-security'
-	
+	// spring security,使用 BCryptPasswordEncoder 密碼加密用
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// spring cache
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	// caffeine cache
+	implementation 'com.github.ben-manes.caffeine:caffeine'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
 
 tasks.named('test') {
 	useJUnitPlatform()
