--- a/questionnaire/build.gradle
+++ b/questionnaire/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
 	// caffeine cache
 	implementation 'com.github.ben-manes.caffeine:caffeine'
+	implementation 'mysql:mysql-connector-java:8.0.23' // 使用最新版本
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
