--- a/questionnaire/src/main/resources/application.properties
+++ b/questionnaire/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #server.port= 8081
 spring.datasource.url=jdbc:mysql://localhost:3306/questionnaire?serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #sql schema檔案來源
